# pub-dotfiles

./: .gitignore  README.md  bin  dot-install  install-dots  install.sh  main.py  pyproject.toml
dots/: gitconfig  tmux.conf  vimrc  zshrc
dots/config/ghostty/: config
dots/config/nvim/: init.lua  old.vim
dots/config/nvim/lua/: completion.lua  finder.lua  keymaps.lua  lsp.lua
dots/config/systemd/user/: mon-ctrl-time.service  mon-ctrl-time.timer
dots/sh/: aliases.sh  fzf-tab.zsh  fzf.zsh
dots/vim/: common.vim
dots/vim/colors/: zenburn.vim
hosts/j-macbook-air.lan/docker/: config.json
