[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pub-dotfiles"
version = "0.1.0"
authors = [
    { name = "James O'Beirne", email = "w.pypi@au92.org" }
]
requires-python = ">=3.10"
dependencies = [
    "clii",
    "fscm",
]

[project.urls]
Repository = "https://github.com/jamesob/pub-dotfiles"


[project.scripts]
update-dotfiles = "main:main"
